--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
     android:background="@drawable/side_nav_bar"
+
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -18,7 +19,8 @@
         app:srcCompat="@drawable/uncle_bob_logo"
         android:layout_width="98dp"
         android:layout_height="75dp"
-        android:contentDescription="@string/pizza_shop_name" />
+        android:contentDescription="@string/pizza_shop_name"
+        android:adjustViewBounds="false" />
 
     <TextView
         android:layout_width="match_parent"
