--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,12 +20,13 @@
             android:title="Tools" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="@string/pizza_shop_contacts">
         <menu>
             <item
                 android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:icon="@drawable/ic_menu_call"
+                android:onClick="callToUncleBob"
+                android:title="@string/pizza_shop_call_now" />
             <item
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_send"
