--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -10,14 +10,15 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+    android:theme="@style/ThemeOverlay.AppCompat.Dark"
+    android:weightSum="1">
 
     <ImageView
         android:id="@+id/imageView"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@drawable/uncle_bob_logo"
-        android:layout_width="98dp"
-        android:layout_height="75dp"
+        app:srcCompat="@mipmap/uncle_bob_logo"
+        android:layout_width="@dimen/nav_logo_width"
+        android:layout_height="@dimen/nav_logo_height"
         android:contentDescription="@string/pizza_shop_name" />
 
     <TextView
