--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,7 +4,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_menu"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_cloche"
             android:title="@string/navigation_drawer_option_menu" />
         <item
             android:id="@+id/nav_sales"
