--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,6 @@
 
     <dimen name="nav_logo_height">75dp</dimen>
     <dimen name="nav_logo_width">98dp</dimen>
+
+    <dimen name="category_text_size">36sp</dimen>
 </resources>
