--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -17,7 +17,7 @@
     <ImageView
         android:id="@+id/imageView"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/uncle_bob_logo"
+        app:srcCompat="@drawable/uncle_bob_logo"
         android:layout_width="@dimen/nav_logo_width"
         android:layout_height="@dimen/nav_logo_height"
         android:contentDescription="@string/pizza_shop_name"
