Fixed lots of things in, erm, ItemPreviewListActivity.

--- a/app/src/main/res/layout/app_bar_wrapper.xml
+++ b/app/src/main/res/layout/app_bar_wrapper.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,7 +11,8 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarOverlay"
+        android:id="@+id/appBarLayout">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -22,15 +23,30 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <!-- Include your content here via addView(1, content.inflate()) -->
-    <!-- http://stackoverflow.com/questions/4046644/android-how-to-dynamically-include-a-xml-layout -->
+
+    <!-- Insert your content here via addView(content) -->
+    <!-- TODO: Replace with a fragment -->
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/app_bar_wrapper_content_container"
+        android:layout_below="@+id/appBarLayout"
+        android:layout_alignParentStart="true"></LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/ic_cart" />
+        app:srcCompat="@drawable/ic_cart"
+        android:layout_marginLeft="@dimen/fab_margin"
+        android:layout_marginRight="@dimen/fab_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin" />
 
-</android.support.design.widget.CoordinatorLayout>
+
+
+</RelativeLayout>
