--- a/app/src/main/res/layout/app_bar_wrapper.xml
+++ b/app/src/main/res/layout/app_bar_wrapper.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:id="@+id/app_bar_wrapper"
-    tools:context="org.team2d.uncle_bob.MainActivity">
+    tools:context="org.team2d.uncle_bob.MainActivityOld">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
