--- a/app/src/main/res/layout/content_category_list.xml
+++ b/app/src/main/res/layout/content_category_list.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="org.team2d.uncle_bob.MainActivity">
+    tools:context="org.team2d.uncle_bob.MainActivityOld">
 
     <FrameLayout
         android:layout_width="match_parent"
