--- a/app/src/main/res/layout/preview_list_content.xml
+++ b/app/src/main/res/layout/preview_list_content.xml
@@ -14,7 +14,7 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context="org.team2d.uncle_bob.MainActivity"
+        tools:context="org.team2d.uncle_bob.MainActivityOld"
         tools:showIn="@layout/app_bar_wrapper"
         android:orientation="vertical">
 
