--- a/app/src/main/res/layout/app_bar_wrapper.xml
+++ b/app/src/main/res/layout/app_bar_wrapper.xml
@@ -32,7 +32,8 @@
         android:layout_height="match_parent"
         android:id="@+id/app_bar_wrapper_content_container"
         android:layout_below="@+id/appBarLayout"
-        android:layout_alignParentStart="true"></LinearLayout>
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"></LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
