--- a/app/src/main/res/layout/fragment_item_details_toggle_button_weight.xml
+++ b/app/src/main/res/layout/fragment_item_details_toggle_button_weight.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ToggleButton xmlns:android="http://schemas.android.com/apk/res/android"
+<RadioButton xmlns:android="http://schemas.android.com/apk/res/android"
     android:textOff="@string/report_as_a_bug"
     android:textOn="@string/report_as_a_bug"
     android:layout_width="match_parent"
