--- a/app/src/main/res/layout/fragment_item_details.xml
+++ b/app/src/main/res/layout/fragment_item_details.xml
@@ -80,7 +80,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/activity_horizontal_margin"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:id="@+id/item_buttons_container">
                     <TextView
                         android:text="@string/pizza_placeholder_price"
                         android:layout_width="match_parent"
@@ -88,44 +89,6 @@
                         android:id="@+id/item_details_price"
                         android:textAppearance="@style/TextAppearance.AppCompat.Large"
                         android:layout_weight="2"/>
-
-                    <Button android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="3"
-                        android:text="@string/item_details_buy"
-                        android:background="@color/colorAccent"
-                        android:id="@+id/item_details_buy" />
-
-                    <Button
-                        android:layout_width="match_parent"
-                        android:layout_height="36dp"
-                        android:layout_weight="4"
-                        android:text="-"
-                        android:background="@color/colorAccent"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                        android:id="@+id/item_details_quantity_decrease"
-                        android:visibility="gone"/>
-                    <EditText
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="4"
-                        android:text="1"
-                        android:textAlignment="center"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
-                        android:inputType="number"
-                        android:background="#FFFFFF"
-                        android:id="@+id/item_details_quantity"
-                        android:visibility="gone"/>
-                    <Button
-                        android:layout_width="match_parent"
-                        android:layout_height="36dp"
-                        android:layout_weight="4"
-                        android:text="+"
-                        android:background="@color/colorAccent"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-                        android:id="@+id/item_details_quantity_increase"
-                        android:visibility="gone"/>
-
                 </LinearLayout>
 
 
