--- a/app/src/main/res/layout-land/fragment_item_details.xml
+++ b/app/src/main/res/layout-land/fragment_item_details.xml
@@ -5,23 +5,24 @@
     android:id="@+id/item_preview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     app:layout_collapseParallaxMultiplier="1.0">
 
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#FFFFFF">
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:background="#FFFFFF"
+        android:layout_gravity="center">
 
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/details_item_image_height"
+            android:layout_width="@dimen/details_item_image_width"
+            android:layout_height="match_parent"
             app:srcCompat="@drawable/pizza_placeholder_image_180x180"
             android:id="@+id/item_details_image"
-            android:minHeight="@dimen/details_item_image_height"
-            android:maxHeight="@dimen/details_item_image_height"/>
+            android:minWidth="@dimen/details_item_image_width"
+            android:maxWidth="@dimen/details_item_image_width" />
     </LinearLayout>
 
     <LinearLayout
@@ -79,7 +80,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/activity_horizontal_margin"
+                    android:layout_margin="@dimen/activity_vertical_margin"
                     android:orientation="horizontal"
                     android:id="@+id/item_buttons_container">
                     <TextView
