--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,5 @@
 
     <dimen name="preview_item_image_height">128dp</dimen>
     <dimen name="details_item_image_height">256dp</dimen>
+    <dimen name="details_item_image_width">512dp</dimen>
 </resources>
