--- a/app/src/main/res/layout/fragment_delivery_info.xml
+++ b/app/src/main/res/layout/fragment_delivery_info.xml
@@ -9,6 +9,6 @@
         android:gravity="center_vertical"
         android:text="@string/delivery_info"
         android:textSize="22sp"
-        android:fontFamily="casual" />
+        android:fontFamily="sans-serif" />
 
 </RelativeLayout>
