--- a/app/src/main/res/layout/item_preview.xml
+++ b/app/src/main/res/layout/item_preview.xml
@@ -43,4 +43,14 @@
         android:layout_alignBottom="@+id/item_preview_image"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true" />
+
+    <TextView
+        android:text="Здесь будет состав"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/item_description"
+        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
+        android:layout_below="@+id/item_preview_title"
+        android:layout_toRightOf="@+id/item_preview_image"
+        android:layout_toEndOf="@+id/item_preview_image" />
 </RelativeLayout>
