--- a/app/src/main/res/layout-land/fragment_item_details.xml
+++ b/app/src/main/res/layout-land/fragment_item_details.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_preview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,7 +16,7 @@
         android:layout_gravity="center">
 
         <ImageView
-            android:layout_width="@dimen/details_item_image_width"
+            android:layout_width="208dp"
             android:layout_height="match_parent"
             app:srcCompat="@drawable/pizza_placeholder_image_180x180"
             android:id="@+id/item_details_image"
