--- a/app/src/main/res/layout-land/fragment_item_details.xml
+++ b/app/src/main/res/layout-land/fragment_item_details.xml
@@ -28,7 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:minHeight="999dp"
-        android:background="@color/colorPrimary">
+        android:background="#FFFFFF">
         <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
