--- a/app/src/main/res/layout/app_bar_wrapper.xml
+++ b/app/src/main/res/layout/app_bar_wrapper.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:id="@+id/app_bar_wrapper"
-    tools:context="org.team2d.uncle_bob.MainActivityOld">
+    tools:context="org.team2d.uncle_bob.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -23,9 +23,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-
-    <!-- Insert your content here via addView(content) -->
-    <!-- TODO: Replace with a fragment -->
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -33,7 +30,9 @@
         android:id="@+id/app_bar_wrapper_content_container"
         android:layout_below="@+id/appBarLayout"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"></LinearLayout>
+        android:layout_alignParentLeft="true">
+
+    </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
@@ -47,8 +46,7 @@
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin" />
-
-
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_alignParentRight="true" />
 
 </RelativeLayout>
