--- a/app/src/main/res/layout/fragment_item_details.xml
+++ b/app/src/main/res/layout/fragment_item_details.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_preview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -28,10 +27,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:minHeight="999dp"
-        android:background="@color/colorPrimary">
+        android:background="#FFFFFF">
         <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            style="@android:style/Widget.DeviceDefault.Light.ScrollView">
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
