--- a/app/src/main/res/layout/item_preview.xml
+++ b/app/src/main/res/layout/item_preview.xml
@@ -46,6 +46,7 @@
 
     <TextView
         android:text="Здесь будет состав"
+        android:maxLength="90"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/item_description"
