Made new xml for items in basket.
Behavior not ready yet.

--- a/app/src/main/res/layout/app_bar_wrapper.xml
+++ b/app/src/main/res/layout/app_bar_wrapper.xml
@@ -23,6 +23,8 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <!-- Insert your content here -->
+
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
