--- a/app/src/main/res/layout/item_basket.xml
+++ b/app/src/main/res/layout/item_basket.xml
@@ -54,27 +54,27 @@
         android:layout_height="wrap_content"
         android:id="@+id/item_basket_sauces_container"
         android:layout_below="@+id/item_basket_description"
-        android:layout_toRightOf="@+id/item_basket_image"
-        android:layout_toEndOf="@+id/item_basket_image" />
+        android:layout_toEndOf="@+id/item_basket_image"
+        android:layout_toRightOf="@+id/item_basket_image">
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:orientation="vertical"
-        android:gravity="center"
+        android:gravity="end"
         android:layout_below="@+id/item_basket_sauces_container"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="23dp"
-        android:layout_marginEnd="23dp"
-        android:layout_marginTop="22dp">
+        android:layout_alignParentEnd="true">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/item_basket_quantity_widget_container"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:gravity="end">
             <!-- Buy buttons here -->
         </LinearLayout>
         <TextView
@@ -84,5 +84,6 @@
             android:id="@+id/item_basket_price"
             android:textAppearance="@style/TextAppearance.AppCompat.Title" />
     </LinearLayout>
+
 
 </RelativeLayout>
