--- a/app/src/main/res/layout/item_preview.xml
+++ b/app/src/main/res/layout/item_preview.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_preview"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -35,16 +36,6 @@
         android:layout_toRightOf="@+id/item_preview_image" />
 
     <TextView
-        android:text="@string/pizza_placeholder_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/item_preview_price"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        android:layout_alignBottom="@+id/item_preview_image"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true" />
-
-    <TextView
         android:text="@string/report_as_a_bug"
         android:maxLength="90"
         android:layout_width="wrap_content"
@@ -54,6 +45,16 @@
         android:layout_below="@+id/item_preview_title"
         android:layout_toRightOf="@+id/item_preview_image"
         android:layout_toEndOf="@+id/item_preview_image"
-        android:maxLines="5"
         android:ellipsize="end"/>
+
+    <TextView
+        android:text="@string/pizza_placeholder_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/item_preview_price"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:layout_alignBottom="@+id/item_preview_image"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        tools:layout_alignBottom="@+id/item_description" />
 </RelativeLayout>
