--- a/app/src/main/res/layout/item_basket.xml
+++ b/app/src/main/res/layout/item_basket.xml
@@ -55,7 +55,8 @@
         android:id="@+id/item_basket_sauces_container"
         android:layout_below="@+id/item_basket_description"
         android:layout_toEndOf="@+id/item_basket_image"
-        android:layout_toRightOf="@+id/item_basket_image">
+        android:layout_toRightOf="@+id/item_basket_image"
+        android:layout_centerInParent="true">
     </LinearLayout>
 
     <LinearLayout
@@ -83,6 +84,5 @@
             android:id="@+id/item_basket_price"
             android:textAppearance="@style/TextAppearance.AppCompat.Title" />
     </LinearLayout>
-
 
 </RelativeLayout>
