--- a/app/src/main/res/layout/item_basket.xml
+++ b/app/src/main/res/layout/item_basket.xml
@@ -67,7 +67,8 @@
         android:gravity="end"
         android:layout_below="@+id/item_basket_sauces_container"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true">
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="2dp">
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
