--- a/app/src/main/res/layout/sauce_basket_item.xml
+++ b/app/src/main/res/layout/sauce_basket_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:gravity="left"
+    android:gravity="start"
     android:layout_height="match_parent">
     <TextView
         android:id="@+id/basket_sauce_bullet"
@@ -17,13 +17,17 @@
         android:id="@+id/basket_sauce_title"
         android:text="@string/report_as_a_bug"
         android:layout_toEndOf="@+id/basket_sauce_bullet"
-        android:layout_toRightOf="@+id/basket_sauce_bullet" />
+        android:layout_toRightOf="@+id/basket_sauce_bullet"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp" />
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:id="@+id/basket_sauce_price"
         android:text="@string/report_as_a_bug"
-        android:layout_below="@+id/basket_sauce_title"
-        />
+        android:layout_toEndOf="@+id/basket_sauce_title"
+        android:layout_toRightOf="@+id/basket_sauce_title"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true" />
 </RelativeLayout>
