--- a/app/src/main/res/layout/app_bar_wrapper.xml
+++ b/app/src/main/res/layout/app_bar_wrapper.xml
@@ -34,6 +34,13 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true">
 
+        <FrameLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/containerView">
+        </FrameLayout>
+
     </LinearLayout>
 
     <android.support.design.widget.FloatingActionButton
