--- a/app/src/main/res/layout/tab_layout.xml
+++ b/app/src/main/res/layout/tab_layout.xml
@@ -10,13 +10,13 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/tabs"
         app:tabMode="fixed"
-
-        android:background="@color/material_blue_grey_800"
-        app:tabIndicatorColor="@color/colorLightPrimary"
-        app:tabSelectedTextColor="@color/colorLightPrimary"
+        android:background="@color/colorPrimaryDark"
+        app:tabIndicatorColor="@color/colorDividerColor"
+        app:tabSelectedTextColor="@color/colorAccent"
         app:tabTextColor="@color/colorTextIcons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
     </android.support.design.widget.TabLayout>
 
     <android.support.v4.view.ViewPager
