--- a/app/src/main/res/layout/sauce_basket_item.xml
+++ b/app/src/main/res/layout/sauce_basket_item.xml
@@ -18,16 +18,15 @@
         android:text="@string/report_as_a_bug"
         android:layout_toEndOf="@+id/basket_sauce_bullet"
         android:layout_toRightOf="@+id/basket_sauce_bullet"
+        android:layout_toStartOf="@+id/basket_sauce_price"
         android:layout_marginStart="5dp"
-        android:layout_marginLeft="5dp" />
+        android:layout_marginLeft="5dp"
+        android:layout_toLeftOf="@+id/basket_sauce_price" />
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
         android:id="@+id/basket_sauce_price"
         android:text="@string/report_as_a_bug"
-        android:layout_toEndOf="@+id/basket_sauce_title"
-        android:layout_toRightOf="@+id/basket_sauce_title"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true" />
 </RelativeLayout>
