--- a/app/src/main/res/layout/fragment_delivery_info.xml
+++ b/app/src/main/res/layout/fragment_delivery_info.xml
@@ -6,9 +6,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_vertical"
         android:text="@string/delivery_info"
         android:textSize="22sp"
-        android:fontFamily="sans-serif" />
+        android:fontFamily="sans-serif-smallcaps"
+        android:gravity="center_vertical" />
 
 </RelativeLayout>
